syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc.nodejs.cil.transactions";
option java_outer_classname = "TransactionsProto";
option objc_class_prefix = "TRANSACTIONS";

package transactions;

service Transactions {
  rpc getTransaction (GetTransactionRequest) returns (GetTransactionReply) {}
  rpc getAllTransactions (GetAllTransactionRequest) returns (GetAllTransactionReply) {}
  rpc createTransaction (CreateTransactionRequest) returns (CreateTransactionReply) {}
  rpc updateTransaction (UpdateTransactionRequest) returns (UpdateTransactionReply) {}
  rpc deleteTransaction (DeleteTransactionRequest) returns (DeleteTransactionReply) {}
}

message GetTransactionRequest {
  string id = 1;
}

message GetTransactionReply {
  string id = 1;
  string amount = 2;
  string senderId = 3;
  string recipientId = 4;
  string status = 5;
  string transactionDate = 6;
}

message GetAllTransactionRequest {}

message GetAllTransactionReply {
  repeated GetTransactionReply listTransaction = 1;
}

message CreateTransactionRequest {
  string amount = 1;
  string senderId = 2;
  string recipientId = 3;
  string status = 4;
  string transactionDate = 5;
}

message CreateTransactionReply {
  string id = 1;
}

message UpdateTransactionRequest {
  string id = 1;
  string amount = 2;
  string senderId = 3;
  string recipientId = 4;
  string status = 5;
  string transactionDate = 6;
}

message UpdateTransactionReply {
  string message = 1;
}

message DeleteTransactionRequest {
  string id = 1;
}

message DeleteTransactionReply {
  string message = 1;
}
